fix(Report): use white space: nowrap to remove line breaks
related to OPT-1444

--- a/client/src/components/Reports/filter/FilterList.scss
+++ b/client/src/components/Reports/filter/FilterList.scss
@@ -48,4 +48,5 @@
   padding: 1px 8px 2px;
   border-radius: 10px;
   color: #fff;
+  white-space: nowrap;
 }
